# SI_exam_project

./: .gitignore  LICENSE  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  app.js  auth-service-si-firebase-adminsdk-nzwji-d987f2e2f4.json  db.js  ddl.js  dml.js  ftp.js  index.js  local.settings.json  package-lock.json  package.json  products.db  pyproject.toml  requirements.txt  sandbox.html  save-products-from-file.csproj  swagger.yaml  upload-azure.sh  users.js
BlobTrigger1/: function.json  index.js
HttpTrigger1/: azure-storage-blob-sas-url.js  function.json  index.js
ScrapeProducts/: __init__.py  products.json  requirements.txt  scrapy.cfg
ScrapeProducts/productscrawler/: products.json  settings.py
api/: package-lock.json  package.json
api/CreateAndSendProductsDB/: db.js  ddl.js  ftp.js  function.json  index.js
api/SendEmail/: index.js
api/SendEmailToInvitedUser/: function.json  index.js
api/SendInviteEmail/: function.json  index.js
azureStorage/: __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json
azureStorage/__blobstorage__/: afbe4ad3-65fb-4a4c-8d55-65cde84089da
db/: categoryData.js  db.js  ddl.js  productData.js
documentation/: README.md  guides_links.txt
gql/: gql.js
productscrawler/productscrawler/: items.py  middlewares.py  pipelines.py  products.json
public/: index.html  login.html  register.html
public/login/: login.html  login.js
(+17 files in other folders)
