[tool.poetry]
name = "si_exam_project"
version = "0.1.0"
description = ""
authors = ["Marianna <mana998@azet.sk>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.7.1"
azure-storage-blob = "^12.14.1"
azure-identity = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
